fixed the issue where connect menu was hidden on mobile menu

--- a/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
+++ b/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
@@ -976,7 +976,7 @@ textarea, input { outline: none !important; }
 	display: none;
 }
 
-.side-2 .mobile-main-menu .block-other-links {
+.mobile-menu-body .side-2 .block-other-links {
 	display: block;
 }
 
